- Fixed an item dupe glitch