@@ -19,7 +19,7 @@ mapping_version=1.20.1
 mod_id=respawn_save_points
 mod_name=Respawn Save Points
 mod_license=MIT
-mod_version=1.1.2
+mod_version=1.1.3
 mod_group_id=tallestegg.respawn_save_points
 mod_authors=TallestEgg, Jake on Discord
 mod_description=Respawn points now act as 'save points' in which the inventory of a player is saved and restored when respawning.
