@@ -9,7 +9,6 @@ import tallestegg.respawn_save_points.RespawnSavePoints;
 
 public class RSPBlockEntities {
     public static final DeferredRegister<BlockEntityType<?>> BLOCK_ENTITIES = DeferredRegister.create(ForgeRegistries.BLOCK_ENTITY_TYPES, RespawnSavePoints.MODID);
-
     public static final RegistryObject<BlockEntityType<RespawnAnchorBlockEntity>> RESPAWN_ANCHOR_BLOCK_ENTITY = BLOCK_ENTITIES.register("respawn_anchor_block_entity", () -> BlockEntityType.Builder.of(RespawnAnchorBlockEntity::new, Blocks.RESPAWN_ANCHOR).build(null));
 
 }
