@@ -6,7 +6,6 @@ import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.state.BlockState;
 
 public class RespawnAnchorBlockEntity extends BlockEntity {
-
     public RespawnAnchorBlockEntity(BlockPos pPos, BlockState pBlockState) {
         super(RSPBlockEntities.RESPAWN_ANCHOR_BLOCK_ENTITY.get(), pPos, pBlockState);
     }
