@@ -9,14 +9,12 @@ import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraftforge.fml.ModList;
 import net.minecraftforge.items.ItemStackHandler;
 import net.minecraftforge.registries.ForgeRegistries;
-import net.p3pp3rf1y.sophisticatedbackpacks.api.CapabilityBackpackWrapper;
-import net.p3pp3rf1y.sophisticatedbackpacks.backpack.BackpackItem;
-import net.p3pp3rf1y.sophisticatedbackpacks.backpack.wrapper.BackpackWrapper;
-import net.p3pp3rf1y.sophisticatedcore.util.InventoryHelper;
 import org.jetbrains.annotations.NotNull;
 import tallestegg.respawn_save_points.Config;
 
 import java.util.UUID;
+
+import static tallestegg.respawn_save_points.ModCompat.doSBCompat;
 
 public class SavedPlayerInventory extends ItemStackHandler {
     public int experienceLevel;
@@ -78,22 +76,16 @@ public class SavedPlayerInventory extends ItemStackHandler {
     public void setCuriosStackInSlot(int slot, @NotNull ItemStack stack) {
         if (!Config.COMMON.itemBlacklist.get().contains(ForgeRegistries.ITEMS.getKey(stack.getItem()).toString()) && !EnchantmentHelper.hasVanishingCurse(stack))
             this.curiosItems.set(slot, stack);
-        if (ModList.get().isLoaded("sophisticatedbackpacks") && stack.getItem() instanceof BackpackItem backpackItem) {
-            ItemStack originalStack = stack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance()).orElseGet(null).cloneBackpack();
-            stack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance()).orElseGet(null).setContentsUuid(UUID.randomUUID());
-            originalStack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance()).orElseGet(null).copyDataTo(new BackpackWrapper(stack));
-        }
+        if (ModList.get().isLoaded("sophisticatedbackpacks"))
+            doSBCompat(stack);
     }
 
     @Override
     public void setStackInSlot(int slot, @NotNull ItemStack stack) {
         if (!Config.COMMON.itemBlacklist.get().contains(ForgeRegistries.ITEMS.getKey(stack.getItem()).toString()) && !EnchantmentHelper.hasVanishingCurse(stack))
             super.setStackInSlot(slot, stack);
-        if (ModList.get().isLoaded("sophisticatedbackpacks") && stack.getItem() instanceof BackpackItem backpackItem) {
-            ItemStack originalStack = stack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance()).orElseGet(null).cloneBackpack();
-            stack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance()).orElseGet(null).setContentsUuid(UUID.randomUUID());
-            originalStack.getCapability(CapabilityBackpackWrapper.getCapabilityInstance()).orElseGet(null).copyDataTo(new BackpackWrapper(stack));
-        }
+        if (ModList.get().isLoaded("sophisticatedbackpacks"))
+            doSBCompat(stack);
     }
 
     public ItemStack getCuriosStackInSlot(int slot) {
